items part added

--- a/src/components/MainPage/Header/Header.css
+++ b/src/components/MainPage/Header/Header.css
@@ -1,11 +1,15 @@
+/* #install-text{
+    font-size:10;
+} */
 /* #logo-size{
 height: 125px;
 width: 400px;
 } */
-#medal-size{
+/* #medal-size{
 height: 125px;
 width: 450px;
-}
-.container {
+} */
+
+/* .container {
     justify-content: flex-start ;
-  }
+  } */
