--- a/src/components/MainPage/FooterPart/FooterPart.css
+++ b/src/components/MainPage/FooterPart/FooterPart.css
@@ -1,15 +1,35 @@
+.main-footer-design{
+    background-color:#ec3237;
+    display: flex;
+    justify-content: space-evenly;
+    max-width: 1350px;
+}
+
+@media (max-width: 768px){
+    .main-footer-design{
+        width: 100%;
+        height: 100%;
+        flex-flow: column wrap;
+        align-items: center;
+        margin: 2px;
+    }
+}
+@media (max-width: 768px){
+    .main-footer-design .flex-design{
+        width: 100%;
+        height: 100%;
+        display: inline-block;
+        margin: 2px;
+    }
+}
 .flex-design{
-    width: 400px;
-    height: 100px;
-    border: 1px solid #c3c3c3;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
-}
-.footer-background-color{
-    background-color:#ec3237;
+    flex:row;
 }
 
 .flex-style{
-    align-self:  flex-end
-    
+    align-self:  flex-end;
 }
